--- a/src/GafasBundle/Resources/views/Default/index.html.twig
+++ b/src/GafasBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,45 @@
-Hello World!
+{% extends "base.html.twig" %}
+
+{% block title %}Gafas{% endblock %}
+{%block style%}
+ <style type="text/css">
+        .box{
+            display: flex;
+            box-sizing: border-box;
+            flex-direction: row;
+            background-color: black;
+        }
+        .header{
+            background-color: aqua;
+            height: 15vh;
+        }
+        .menu{
+            background-color: yellowgreen;
+            width: 20%;
+            height: 90vh;
+
+        }
+        .main{
+            background-color: tomato;
+            width: 80%;
+            height: 90vh;
+        }
+
+	footer{
+	    background-color: aqua;
+	    
+		}
+    </style>
+{%endblock%}
+{%block  header%}
+    <div class="header"> Esto es el header de las gafas</div>
+{%endblock%}
+{% block body %}
+<div class="box">
+            <div class="menu">Categorias</div>
+            <div class="main">Main</div>
+        </div>
+{% endblock %}
+{%block footer%}
+    <footer>Esto es el footer</footer>      
+{%endblock%}
