--- a/src/GafasBundle/Resources/views/Default/index.html.twig
+++ b/src/GafasBundle/Resources/views/Default/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Gafas{% endblock %}
 {%block style%}
  <style type="text/css">
-        .box{
+       .box{
             display: flex;
             box-sizing: border-box;
             flex-direction: row;
@@ -16,14 +16,23 @@
         .menu{
             background-color: yellowgreen;
             width: 20%;
-            height: 90vh;
-
-        }
+            }
         .main{
             background-color: tomato;
             width: 80%;
-            height: 90vh;
+            flex: 1;
         }
+        .main-body{
+            display: flex;
+            flex-flow: row wrap;
+        }
+        .card{
+            margin: 0.5em;
+            background-color:blueviolet;
+            width: 35vh;
+            height: 13em;
+        }
+        
 
 	footer{
 	    background-color: aqua;
@@ -35,9 +44,26 @@
     <div class="header"> Esto es el header de las gafas</div>
 {%endblock%}
 {% block body %}
-<div class="box">
-            <div class="menu">Categorias</div>
-            <div class="main">Main</div>
+               <div class="box">
+            <div class="menu">Menu</div>
+            <div class="main">
+                <div class="main-head"><h1>Catalogo de Gafas</h1></div>
+                <div class="main-body">
+                    {% for gafa in gafas %}
+                    <div class="card">
+                        <div class="card-header">
+                            {{ gafa.model }}
+                        </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                        <p>{{ gafa.category}} </p>
+                        <p>{{ gafa.price}}€</p>
+                    </blockquote>
+                    </div>
+                </div>
+                {% endfor %}
+                </div>
+            </div>
         </div>
 {% endblock %}
 {%block footer%}
