--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="../img/glasses.png" />
           {%block style%}
           {%endblock%}
     </head>
