Nombre de categoria recuperado

--- a/src/GafasBundle/Resources/views/Default/index.html.twig
+++ b/src/GafasBundle/Resources/views/Default/index.html.twig
@@ -111,8 +111,8 @@
                         <a href="detail/{{gafa.id}}">
                             <img src="../img/{{gafa.image}}" ></a>
                         </div>
-                        <p>{{ gafa.category}} </p>
                         <p>{{ gafa.price}}€</p>
+                         <p>{{ gafa.categoria}}</p>
                     </blockquote>
                     </div>
                 </div>
