--- a/src/GafasBundle/Resources/views/Default/detail.html.twig
+++ b/src/GafasBundle/Resources/views/Default/detail.html.twig
@@ -8,7 +8,10 @@
 {%endblock%}
 {% block body %}
     <h1>{{ gafa.model }}</h1>
-    <p> {{ gafa.category }}</p>
+    <p> {{ gafa.categoria }}</p>
+    <div>
+        <img src="../../img/{{gafa.image}}" >
+    </div>
  {% endblock %}
 {%block footer%}
     <footer>Esto es el footer</footer>      
