Añadir al carrito DONE

--- a/src/GafasBundle/Resources/views/Default/detail.html.twig
+++ b/src/GafasBundle/Resources/views/Default/detail.html.twig
@@ -76,7 +76,8 @@
                     <i class="fa fa-heart-o"></i>
                 </div>
                 <div class="añadir">
-                    Añadir al carrito
+                    <a href="/carro/add/{{gafa.id}}/{{app.user.id}}" ><button>Añadir al carrito</button></a>
+                    
                 </div>
                 <div class="comprar"><b>COMPRAR</b></div>
             </div>
