Añadir y mostrar carrito

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,6 +31,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/login">Log In</a>
       </li>
+      {% if app.user %}
+      <li class="nav-item">
+        <a class="nav-link" href="/carro/{{app.user.id}}">Carro</a>
+      </li>
+      {% endif %}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
