Logica de carrito completa

--- a/app/Resources/views/default/registro.html.twig
+++ b/app/Resources/views/default/registro.html.twig
@@ -9,7 +9,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('gafas_index') }}">Back to the list</a>
+            <a href="/">Volver</a>
         </li>
     </ul>
 {% endblock %}
