refactorización del css

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,11 +4,13 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="shortcut icon" href="">
+        <link rel="stylesheet" href="{{asset('css/style.css')}}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="../img/glasses.png" />
           {% block style %}
+ 
           {% endblock %}
     </head>
     <body>
@@ -26,27 +28,23 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li> 
+
+        <a class="nav-link" href="/"><img src="/img/geek.png" id="logo"></img></a>
+     
       
      
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
+    
       
     </ul>
-    {% if app.user %}
     
-          <a class="nav-link" href="/carro/{{app.user.id}}">Carro</a>
+      {% if app.user %}
+           {% if app.user.Roles[0] == "ROLE_ADMIN" %}
+              <a href="/admin">Panel de Admin</a>
+        {% endif %}
+       
+
+
+          <a class="nav-link" href="/carro/{{app.user.id}}"> <i class="fa fa-shopping-cart"></i></a>
           <a class="nav-link" href="/logout">LogOut</a>
     {% else %}
     
@@ -57,8 +55,9 @@
     {% endif %}
   </div>
 </nav>
+ 
         {% block body %}          
-        
+
         {% endblock %}
         
         {%block footer%}
